.archive/clusters/homelab-1/.network-policies/allow-ingress-from-gatus/destination/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-gatus
spec:
  podSelector:
    matchLabels:
      networking/allow-ingress-to-gatus: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: share
          podSelector:
            matchLabels:
              app.kubernetes.io/name: gatus-app
              app.kubernetes.io/instance: gatus-app
